// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src | components | layout | buttons | ActivationButton snapshot whith props 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ActivationButton
    className="pc-theme-gradient px18 pb18 pt16 fs20"
    onClickHandler={[MockFunction]}
    style={
      Object {
        "borderRadius": 4,
      }
    }
  >
    <span>
      Activez votre pass Culture
    </span>
  </ActivationButton>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <span>
        Activez votre pass Culture
      </span>,
      "className": "activation-button pc-theme-gradient px18 pb18 pt16 fs20",
      "onClick": [MockFunction],
      "replace": false,
      "style": Object {
        "borderRadius": 4,
      },
      "to": "/activation/events",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": "Activez votre pass Culture",
      },
      "ref": null,
      "rendered": "Activez votre pass Culture",
      "type": "span",
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <span>
          Activez votre pass Culture
        </span>,
        "className": "activation-button pc-theme-gradient px18 pb18 pt16 fs20",
        "onClick": [MockFunction],
        "replace": false,
        "style": Object {
          "borderRadius": 4,
        },
        "to": "/activation/events",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Activez votre pass Culture",
        },
        "ref": null,
        "rendered": "Activez votre pass Culture",
        "type": "span",
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`src | components | layout | buttons | ActivationButton snapshot whithout props 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ActivationButton
    className=""
    onClickHandler={[Function]}
    style={Object {}}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <span
        className="is-block"
      >
        Activer
      </span>,
      "className": "activation-button ",
      "onClick": [Function],
      "replace": false,
      "style": Object {},
      "to": "/activation/events",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": "Activer",
        "className": "is-block",
      },
      "ref": null,
      "rendered": "Activer",
      "type": "span",
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <span
          className="is-block"
        >
          Activer
        </span>,
        "className": "activation-button ",
        "onClick": [Function],
        "replace": false,
        "style": Object {},
        "to": "/activation/events",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Activer",
          "className": "is-block",
        },
        "ref": null,
        "rendered": "Activer",
        "type": "span",
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
